--- a/blog/templates/blog/homepage.html
+++ b/blog/templates/blog/homepage.html
@@ -6,6 +6,7 @@
     <script src="{% static 'blog/js/toast.js' %}"></script>
     <script src="{% static 'blog/js/homepage_animation_on_scroll.js' %}"></script>
 
+    <link rel="stylesheet" href="{% static 'blog/css/components/project_card.css' %}">
     <link rel="stylesheet" href="{% static 'blog/css/homepage.css' %}">
     <script src="{% static 'blog/js/contact_email_form.js' %}"></script>
 {% endblock script %}
