--- a/blog/static/blog/css/general.css
+++ b/blog/static/blog/css/general.css
@@ -107,3 +107,12 @@ img {
 main {
     background-color: purple;
 }
+
+.badge {
+    font-size: 0.8em;
+}
+.small-icon {
+    width: 12px;
+    position: relative;
+    top:-1px;
+}
