--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -34,7 +34,7 @@
 
 <body>
     {% include "blog/home_components/navbar.html" %}    
-    <main>
+    <main class="container-xxl">
         {% block main %}{% endblock main %}
     </main>
     {% include "blog/home_components/footer.html" %}
