--- a/blog/templates/blog/homepage.html
+++ b/blog/templates/blog/homepage.html
@@ -14,27 +14,33 @@
 {% block main %}
     
     {% comment %} hero {% endcomment %}
-    <section id="hero" class="d-flex flex-wrap-reverse justify-content-between gap-md-1">
-            {% comment %} VOY AQUI {% endcomment %}
-            <article class="col-12 col-md-6 d-flex flex-column justify-content-around">
+    <section id="home" class="d-flex flex-wrap-reverse align-items-center justify-content-between gap-md-1">
+            <article class="col-12 col-md-6 d-grid gap-1 gap-lg-4">
                 <h1>I'm Keiner Mendoza</h1>
-                <h2>Web Developer</h2>
+                <h3>Web Developer</h3>
                 <h4>I make software solutions using web tecnologies as HTML, CSS, JavaScript, Django and React</h4>
                 <h4>I believe in continuous learning, since May 2022 I have been developing my programming skills and I plan to continue improving in this field.</h4>
             </article>
 
         <figure class="col-12 col-md-5">
-            <img src="{% static 'blog/images/profile.jpg' %}" alt="profile picture of the programmer keiner mendoza" />
+            <img class="profile" src="{% static 'blog/images/profile.jpg' %}" alt="profile picture of the programmer keiner mendoza" />
         </figure>
     </section>
     
     {% comment %} projects {% endcomment %}
     <section id="projects">
-        
+        <h2 class="text-center mb-4">Projects</h2>
+        <div class="grid-columns-min-300px">
+            {% include "blog/home_components/project_components/project_card.html" with projects=projects %}
+        </div>
+        <div class="text-center mt-5">
+            <a class="btn btn-light btn-lg mx-auto" href="#alltheprojects">See all the projects</a>
+        </div>
     </section>
     
     {% comment %} courses {% endcomment %}
-    <section id="courses">
+    <section id="certificates">
+        <h2 class="text-center mb-4">Certificates</h2>
         
     </section>
     
