--- a/blog/static/blog/css/homepage.css
+++ b/blog/static/blog/css/homepage.css
@@ -9,3 +9,42 @@
 .profile {
     border-radius: 50%;
 }
+section:not(:first-child) {
+    padding-block: 40px;
+}
+/* limit the height and inherit the border radius */
+.product-img {
+    overflow: hidden;
+    height: 45%;
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
+    margin: 0;
+}
+.product-img > img {
+    object-fit: cover;
+    object-position: center top;
+    width: 100%;
+    height: 100%;
+}
+/* developer */
+.badge {
+    font-size: 0.8em;
+}
+.small-icon {
+    width: 12px;
+    position: relative;
+    top:-1px;
+}
+#home {
+    background-color: blueviolet;
+}
+#projects {
+    background-color: rgb(81, 21, 136);
+}
+
+.grid-columns-min-300px {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(min(300px, 100%), 1fr));
+}
+
