working on certificate section

--- a/blog/templates/blog/home_components/project_components/project_card.html
+++ b/blog/templates/blog/home_components/project_components/project_card.html
@@ -41,7 +41,7 @@
             {% comment %} certificate {% endcomment %}
             {% if project.certificate  %}
                 <span class="badge text-bg-dark">
-                    <img class="small-icon" src="{% static 'blog/images/verified_FILL0_wght400_GRAD0_opsz24.svg' %}" alt="certificate icon">
+                    <img class="small-icon" src="{% static 'blog/images/verified.svg' %}" alt="certificate icon">
                     <span>Certificate</span>
                 </span>
             {% endif %}
