--- a/blog/static/blog/css/homepage.css
+++ b/blog/static/blog/css/homepage.css
@@ -13,18 +13,25 @@ section:not(:first-child) {
     padding-block: 40px;
 }
 /* limit the height and inherit the border radius */
-.product-img {
+.certified-img , .product-img {
     overflow: hidden;
     height: 45%;
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
     margin: 0;
 }
-.product-img > img {
+.certified-img > img, .product-img > img {
     object-fit: cover;
     object-position: center top;
     width: 100%;
     height: 100%;
+}
+
+.certified-img {
+    height:100%;
+}
+.certified-img > img {
+    object-position: center left;
 }
 /* developer */
 .badge {
@@ -35,6 +42,17 @@ section:not(:first-child) {
     position: relative;
     top:-1px;
 }
+.icon-verified {
+    width: 20px;
+}
+.bullet-in {
+    list-style: url('../images/circle-check-regular.svg');
+    list-style-position:inside;
+    font-size: 1.1em;
+    padding-inline-start: 1ch;
+}
+
+
 #home {
     background-color: blueviolet;
 }
