--- a/blog/static/blog/css/general.css
+++ b/blog/static/blog/css/general.css
@@ -24,7 +24,7 @@ body {
     background-color: gray;
     font-family: 'TiltNeon';
 }
-h1, h2, h3 {
+h1, h2, h3, h4 {
     font-family: 'YoungSerif';
 }
 
