--- a/blog/static/blog/css/homepage.css
+++ b/blog/static/blog/css/homepage.css
@@ -13,9 +13,13 @@ section:not(:first-child) {
     padding-block: 40px;
 }
 /* limit the height and inherit the border radius */
+
+/* .project-card {
+    height: 530px;
+} */
 .certified-img , .product-img {
-    overflow: hidden;
-    height: 45%;
+    overflow:hidden;
+    height: 40%;
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
     margin: 0;
@@ -26,7 +30,11 @@ section:not(:first-child) {
     width: 100%;
     height: 100%;
 }
-
+/* @media (min-width:768px) {
+    .certificate-card {
+        height: 300px;
+    }
+} */
 .certified-img {
     height:100%;
 }
@@ -48,21 +56,28 @@ section:not(:first-child) {
 .bullet-in {
     list-style: url('../images/circle-check-regular.svg');
     list-style-position:inside;
-    font-size: 1.1em;
     padding-inline-start: 1ch;
 }
+li::marker{
+    font-size: 1.4em;
+    line-height: 0.1;
+ }
+
 
 
 #home {
     background-color: blueviolet;
 }
+#home p {
+    font-size: 0.8em;
+}
 #projects {
     background-color: rgb(81, 21, 136);
 }
 
-.grid-columns-min-300px {
+.grid-columns-min-280px {
     display: grid;
     gap: 20px;
-    grid-template-columns: repeat(auto-fill, minmax(min(300px, 100%), 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(min(220px, 100%), 1fr));
 }
 
