--- a/blog/templates/blog/home_components/project_components/project_card.html
+++ b/blog/templates/blog/home_components/project_components/project_card.html
@@ -1,18 +1,18 @@
 {% load static %}
 
 {% for project in projects  %}
-<a class="card nav-link" href='#projects-slash-{{project.name}}-type-slug'>
+<a class="card project-card nav-link" href='#projects-slash-{{project.name}}-type-slug'>
     <figure class="product-img">
         <img  src="{{project.image}}" alt="{{project.name}}">
     </figure>
 
     <div class="card-body d-flex flex-column justify-content-between">
         <div>
-            <h3 class="card-title">{{project.name}}</h3>
+            <h4 class="card-title">{{project.name}}</h4>
             <p class="card-text">{{project.description}}</p>
         </div>
         <div class="text-center mt-3 m-sm-0">
-            <h5>This Project has</h5>
+            <h6>This Project has</h6>
 
             {% comment %} github code {% endcomment %}
             {% if project.code  %}
