--- a/blog/static/blog/css/homepage.css
+++ b/blog/static/blog/css/homepage.css
@@ -76,7 +76,7 @@ li::marker{
     background-color: blueviolet;
 }
 #home p {
-    font-size: 0.8em;
+    font-size: 0.9em;
 }
 #projects {
     background-color: rgb(81, 21, 136);
@@ -87,4 +87,9 @@ li::marker{
     gap: 20px;
     grid-template-columns: repeat(auto-fit, minmax(min(220px, 100%), 1fr));
 }
-
+.sticky {
+    position: sticky;
+}
+.about p {
+    font-size: 1.1em;
+}
