--- a/blog/templates/blog/homepage.html
+++ b/blog/templates/blog/homepage.html
@@ -19,7 +19,7 @@
                 <h1 class="mb-0">I'm Keiner Mendoza</h1>
                 <h2 class="text-warning">Web Developer</h2>
                 <h4>I make websites using tecnologies as JavaScript, HTML, CSS, Django and More. I'm open to work</h4>
-                <div class="d-flex justify-content-center justify-content-md-start gap-2 text-center">
+                <div class="d-flex justify-content-center justify-content-md-start gap-2 text-center font-neon">
                     <div>
                         <a class="btn btn-primary mb-1">Send me a Message</a>
                         <p class="">Use the email sistem <br/> of this site</p>
@@ -40,29 +40,31 @@
     </section>
     
     {% comment %} about {% endcomment %}
-    <section id="about" class="text-light">
+    <section id="about" class="text-light about">
         <h2 class="text-center  mb-4">About</h2>
-            <div class="col-11 mx-auto">
 
                 <div class="row col-gap-4">
                     <!-- at the four elements i add margin block 4 for small screens -->
-                    <p class="mx-auto col-10 col-md-5 my-4 my-md-0">
-                        I'm a venezuelan self learning programmer. I actually studied Economy in the University, no fue si no hasta 
-                        que termine mis estudios universitarios que conoci el mundo de la programacion y supe que me queria dedicar
-                        a la solucion de problemas por medio de la creacion de software. He estado trabajando en mis habilidades 
-                        como porgramador desde mayo de 2022 y desde entonces no he parado de aprender y de crear cosas.
-                    </p>
-                    <figure class="about-svg mx-auto col-10 col-md-4  my-4 my-md-0">
-                        <img class="" src="{% static 'blog/images/mobile_ds.svg' %}" alt="a person designing an mobile User interface">
-                    </figure>
+                    <div class="row d-flex flex-wrap justify-content-center justify-content-md-between ">
 
+                        <p class=" col-10 col-md-5 my-4 my-md-0">
+                            I'm a venezuelan self learning programmer. I actually studied Economy in the University, no fue si no hasta 
+                            que termine mis estudios universitarios que conoci el mundo de la programacion y supe que me queria dedicar
+                            a la solucion de problemas por medio de la creacion de software. He estado trabajando en mis habilidades 
+                            como porgramador desde mayo de 2022 y desde entonces no he parado de aprender y de crear cosas.
+                        </p>
+                        <figure class="about-svg col-10 col-md-4  my-4 my-md-0">
+                            <img class="" src="{% static 'blog/images/mobile_ds.svg' %}" alt="a person designing an mobile User interface">
+                        </figure>
+                    </div>
+                        
                     <!-- i had an extra div for swap the img and text in small screens -->
-                    <div class="row d-flex flex-wrap-reverse my-md-5">
+                    <div class="row d-flex flex-wrap-reverse my-md-5 justify-content-center justify-content-md-between">
 
-                        <figure class="about-svg mx-auto col-10 col-md-5 my-4 my-md-0">
+                        <figure class="about-svg  col-10 col-md-5 my-4 my-md-0">
                             <img class="" src="{% static 'blog/images/desktop_ds.svg' %}" alt="a person designing an desktop User interface">
                         </figure>
-                        <p class="mx-auto col-10 col-md-5  my-4 my-md-0" >
+                        <p class=" col-10 col-md-5  my-4 my-md-0" >
                             Inicialmente mi acercamiento a la programacion se dio con la automatizacion de pequenas tareas
                             ha sido en el area de la creacion de sites que he tenido interaccion con clientes.
                             Actualmente vivo en Brasil, tengo un dominio basico del ingles, intermedio del portugues y el espanol
@@ -72,7 +74,6 @@
                 
                 </div>
 
-            </div>
     </section>
 
     {% comment %} projects {% endcomment %}
@@ -82,7 +83,7 @@
             {% include "blog/home_components/project_components/project_card.html" with projects=projects %}
         </div>
         <div class="text-center mt-5">
-            <a class="btn btn-light btn-lg mx-auto" href="#alltheprojects">See all the projects</a>
+            <a class="btn btn-light btn-lg mx-auto" href="{% url 'project_list'  %}">See all the projects</a>
         </div>
     </section>
     
@@ -91,6 +92,9 @@
         <h2 class="text-center mb-4">Certificates</h2>
         <div class="">
             {% include "blog/home_components/certificate_components/certificate_card.html" with certificates=certificates %}
+        </div>
+        <div class="text-center mt-5">
+            <a class="btn btn-light btn-lg mx-auto" href="{% url 'certificate_list'  %}">See all the certificates</a>
         </div>
     </section>
     
@@ -105,3 +109,5 @@
     </section>
 
 {% endblock main %}
+
+
