--- a/blog/static/blog/css/homepage.css
+++ b/blog/static/blog/css/homepage.css
@@ -93,3 +93,16 @@ li::marker{
 .about p {
     font-size: 1.1em;
 }
+
+
+.email_form_container {
+    padding: 1rem;
+    border-radius: 10px;
+    background: linear-gradient(rgba(50, 50, 50, 0.473), rgba(50, 50, 50, 0.473)), url(../images/ecommerce.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+.email_form_container .form-control {
+    background-color: rgba(240, 248, 255, 0.85);
+}
