--- a/blog/templates/blog/home_components/project_components/project_card.html
+++ b/blog/templates/blog/home_components/project_components/project_card.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 {% for project in projects  %}
-<a class="card project-card nav-link" href='#projects-slash-{{project.name}}-type-slug'>
+<a class="move-to-right-on-scroll show-on-scroll card project-card nav-link" href='#projects-slash-{{project.name}}-type-slug'>
     <figure class="product-img">
         <img  src="{{project.image}}" alt="{{project.name}}">
     </figure>
