--- a/blog/templates/blog/home_components/certificate_components/certificate_card.html
+++ b/blog/templates/blog/home_components/certificate_components/certificate_card.html
@@ -1,56 +1,63 @@
 {% load static %}
 
 
-{% for certificate in certificates  %}
-<div class="card certificate-card mb-3 overflow-hidden mx-auto col-11 col-md-10" >
-    <div class="row g-0">
-      
-        <div class="col-md-7 col-lg-6">
-            <figure class="certified-img">
-                <img  src="{% static certificate.image %}" alt="{{certificate.title}}">
-            </figure>
-        </div>
-      
+<div class="d-flex flex-wrap justify-content-between">
 
-        <div class="col-md-5 col-lg-5 card-body d-flex flex-column justify-content-between text-center text-bg-dark">
-            <div>
-                <h4 class="card-title">
-                    <img class="icon-verified" src="{% static 'blog/images/verified.svg' %}" alt="icon verified">
-                    <span>{{certificate.title}}</span>
-                </h4>
-                <div class="text-center " >
-                    <h5 class="mb-3">Topics</h5>
-                    <ul class="row g-2 row-cols-2 ">
-    
-                    {% for topic in certificate.topics %}
-                            <li class="col bullet-in">{{topic}}</li>
-                    {% endfor %}
-                    </ul>
+    {% for certificate in certificates  %}
+    <div class="col-12 col-sm-6 col-lg-10 mx-auto">
+
+        <div class="card mb-3 overflow-hidden row" >
+
+            {% comment %} image {% endcomment %}
+            <div class="col-12 col-sm-5">
+                <figure class="certified-img">
+                    <img  src="{% static certificate.image %}" alt="{{certificate.title}}">
+                </figure>
+            </div>
+        
+
+            <div class="col-12 col-sm-5 card-body d-flex flex-column justify-content-between text-center text-bg-dark">
+                <div>
+                    <h4 class="card-title">
+                        <img class="icon-verified" src="{% static 'blog/images/verified.svg' %}" alt="icon verified">
+                        <span>{{certificate.title}}</span>
+                    </h4>
+
+                    {% comment %} topics {% endcomment %}
+                    <div class="d-none d-lg-block text-center" >
+                        <h5 class="mb-3">Topics</h5>
+                        <ul class="row g-2 row-cols-2 ">
+        
+                        {% for topic in certificate.topics %}
+                                <li class="col bullet-in">{{topic}}</li>
+                        {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+                <div class="text-center mt-5">
+                    
+                    {% comment %} excercises {% endcomment %}
+                    {% if certificate.excercises  %}
+                        <span class="badge text-bg-light">
+                            <img class="small-icon" src="{% static 'blog/images/github.svg' %}" alt="github icon">
+                            <span>{{certificate.excercises}} Excercises</span>
+                        </span>
+                    {% endif %}
+        
+                    {% comment %} projects {% endcomment %}
+                    {% if certificate.project  %}
+                        <span class="badge text-bg-light">
+                            <img class="small-icon" src="{% static 'blog/images/globe-solid.svg' %}" alt="globe icon">
+                            <span>{{certificate.project}} Project{{ certificate.project | pluralize }}</span>
+                        </span>
+                    {% endif %}
+        
+                    <h5 class="text-center mt-2 mb-3">Click for see more...</h5>
                 </div>
             </div>
-            <div class="text-center mt-5">
-                
-                {% comment %} excercises {% endcomment %}
-                {% if certificate.excercises  %}
-                    <span class="badge text-bg-light">
-                        <img class="small-icon" src="{% static 'blog/images/github.svg' %}" alt="github icon">
-                        <span>{{certificate.excercises}} Excercises</span>
-                    </span>
-                {% endif %}
-    
-                {% comment %} projects {% endcomment %}
-                {% if certificate.project  %}
-                    <span class="badge text-bg-light">
-                        <img class="small-icon" src="{% static 'blog/images/globe-solid.svg' %}" alt="globe icon">
-                        <span>{{certificate.project}} Project{{ certificate.project | pluralize }}</span>
-                    </span>
-                {% endif %}
-    
-                <h5 class="text-center mt-2 mb-3">Click for see more...</h5>
-            </div>
+        
         </div>
-    
-    </div>
 </div>
-
-{% endfor %}
+    
+    {% endfor %}
+</div>
