--- a/blog/templates/blog/certificates/certificate_detail.html
+++ b/blog/templates/blog/certificates/certificate_detail.html
@@ -11,12 +11,8 @@
 
 {% block main %}
 <section class="projects container-fluid">
-    <h1 class="text-center pt-4 mb-4">Certificates</h1>
-    {% comment %} <article class="row gap-4 row-cols-1 row-cols-sm-2 row-cols-lg-3 d-flex justify-content-evenly child-max-400px"> {% endcomment %}
-        <!-- TODO  -->
-        <!-- create a new display simialr to about display -->
+    <h1 class="text-center pt-4 mb-4">{{certificate.title}}</h1>
 
-                {% for certificate in certificates %}
                 <div class="container">
                     <!-- at the four elements i add margin block 4 for small screens -->
                     <div class="row row-cols-1 row-cols-sm-2 d-flex flex-wrap justify-content-center justify-content-md-between ">
@@ -57,33 +53,14 @@
                             <div>
                             
                             {% endif %}
-                            <a class="btn btn-primary" href="http://localhost:8000/certificate/{{certificate.slug}}"> Click for see more...</a>
                 
                             {% comment %} <a class="btn btn-primary" href="{{certificate.get_absolute_url}}"> Click for see more...</a> {% endcomment %}
                         </div>
                        
                     </div>
                 </div>
-                {% endfor %}
-                        
-                        <!-- i had an extra div for swap the img and text in small screens -->
-                        {% comment %} <div class="row d-flex flex-wrap-reverse my-md-5 justify-content-center justify-content-md-between">
-    
-                            <figure class="about-svg  col-10 col-md-5 my-4 my-md-0">
-                                <img class="" src="{% static 'blog/images/desktop_ds.svg' %}" alt="a person designing an desktop User interface">
-                            </figure>
-                            <p class=" col-10 col-md-5  my-4 my-md-0" >
-                                Inicialmente mi acercamiento a la programacion se dio con la automatizacion de pequenas tareas
-                                ha sido en el area de la creacion de sites que he tenido interaccion con clientes.
-                                Actualmente vivo en Brasil, tengo un dominio basico del ingles, intermedio del portugues y el espanol
-                                es mi idioma nativo.
-                            </p>
-                        </div>
-                    
-                    </div> {% endcomment %}
-    
-        {% comment %} {% include "blog/home_components/certificate_components/certificate_card.html" with certificates=certificates %} {% endcomment %}
-    {% comment %} </article> {% endcomment %}
+              
+              
     </section>
         
 {% endblock main %}
